# neotools

./: .gitignore  README.md  development.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt
alphatools/: applet.py  cli.py  commands.py  device.py  file.py  main.py  message.py  text_file.py  util.py
neotools/: applet.py  cli.py  commands.py  constants.py  device.py  file.py  main.py  message.py  text_file.py  util.py
neotools/applet/: applet.py  constants.py  manager.py  settings.py
neotools/character_map/: en-us.txt  ua-mac.txt  ua-pc.txt
tests/unit/: test_file.py
tests/unit/text_conversion/: test_text_conversion.py
usb_pcap/: connection.pcapng  get_info.pcapng  install_applets_remove_unlisted.pcapng  install_calculator302.pcapng  install_multiple_fonts.pcapng  install_neofont_atto11.pcapng  install_neofont_bold6.pcapng  install_neofont_femto9.pcapng  install_neofont_small6.pcapng  install_neofont_tech6.pcapng  install_spellcheck_large_usa_103.pcapng  install_thesaurus.pcapng  send_file3_to_device.pcapng  send_file4_to_device.pcapng  view_file.pcapng
