
[metadata]
name = alphatools
version = 0.1
license = GNU GPL 3
license_file = LICENSE
author = Boris Lykah
url = https://github.com/lykahb/alphatools

[options]
install_requires=
    pyusb
    click>7
package_dir=
    =.
packages = find:

[options.entry_points]
console_scripts =
    alphatools = alphatools.cli:cli
