
[metadata]
name = neotools
version = 0.1
license = GNU GPL 3
license_file = LICENSE
author = Boris Lykah
description = command line tools for AlphaSmart NEO
url = https://github.com/lykahb/neotools
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
install_requires=
    pyusb
    click>7
package_dir=
    =.
packages = find:

[options.entry_points]
console_scripts =
    neotools = neotools.cli:cli
