[metadata]
name = neotools
version = 0.3.4
license = GNU GPL 3
license_file = LICENSE
author = Borys Lykah
description = Command line tools for AlphaSmart NEO
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lykahb/neotools
platforms = unix, linux, osx, cygwin, win32
project_urls =
    Bug Tracker = https://github.com/lykahb/neotools/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
install_requires=
    pyusb
    click>7
package_dir=
    =.
include_package_data = True
packages = find:
python_requires = >=3.4

[options.extras_require]
testing =
    hypothesis>5
    pytest

[options.entry_points]
console_scripts =
    neotools = neotools.cli:cli
